--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <a href="#" class="intro-btn-2">Learn More</a>
                     </div>
                 </div>
-                <img class="intro-img" src="/Source/agent-v 1.svg">
+                <img class="intro-img" src="Source/agent-v 1.svg">
             </div>
         </div>
     </div>
@@ -53,15 +53,15 @@
             </div>
             <div class="area-cards">
                 <div class="area-item">
-                    <img src="/Source/opa1.svg" alt="">
+                    <img src="Source/opa1.svg" alt="">
                     <h5>Family Law</h5>
                 </div>
                 <div class="area-item-2">
-                    <img src="/Source/opa2.svg" alt="">
+                    <img src="Source/opa2.svg" alt="">
                     <h5>Business Law</h5>
                 </div>
                 <div class="area-item">
-                    <img src="/Source/opa3.svg" alt="">
+                    <img src="Source/opa3.svg" alt="">
                     <h5>Trust & Estates</h5>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                             particles, but then it<br> 
                             was discovered </p>
                     </div>
-                    <img src="/Source/advice1.svg" alt="">
+                    <img src="Source/advice1.svg" alt="">
                 </div>
                 <div class="advice-item">
                     <div class="advice-item-content">
@@ -92,7 +92,7 @@
                             is the description of the<br> 
                             behaviour of matter</p>
                     </div>
-                    <img src="/Source/advice2.svg" alt="">
+                    <img src="Source/advice2.svg" alt="">
                 </div>
                 <div class="advice-item">
                     <div class="advice-item-content">
@@ -101,7 +101,7 @@
                             universe consisting of<br> 
                             bodies moving</p>                      
                     </div>
-                    <img src="/Source/advice3.svg" alt="">
+                    <img src="Source/advice3.svg" alt="">
                 </div>
                 <div class="advice-item">
                     <div class="advice-item-content">
@@ -110,7 +110,7 @@
                             a consistent description<br> 
                             of the behaviour </p>
                     </div>
-                    <img src="/Source/advice4.svg" alt="">
+                    <img src="Source/advice4.svg" alt="">
                 </div>
             </div>
         </div>
@@ -124,7 +124,7 @@
             </div>
             <div class="who-inner">
                 <div class="media">
-                    <img src="/Source/who1.svg" alt="">
+                    <img src="Source/who1.svg" alt="">
                 </div>
                 <div class="who-discription"> 
                     <h2 class="section-title">Most trusted in 
@@ -133,7 +133,7 @@
                     is designed for freelancers who want a 
                     simple way to plan their schedule.</p>
                     <div class="discription-cards">
-                        <img src="/Source/who2.svg" alt="">
+                        <img src="Source/who2.svg" alt="">
                         <div class="discription-inner">
                             <h5>the quick fox jumps over the lazy 
                                 dog</h5>
@@ -141,7 +141,7 @@
                         </div>
                     </div>
                     <div class="discription-cards">
-                        <img src="/Source/who3.svg" alt="">
+                        <img src="Source/who3.svg" alt="">
                         <div class="discription-inner">
                             <h5>the quick fox jumps over the lazy 
                                 dog</h5>
@@ -155,12 +155,12 @@
     <section class="clients">
         <div class="container">
             <div class="client-ex">
-                <img src="/Source/fa-brands_hooli.svg" alt="">
-                <img src="/Source/fa-brands_lyft.svg" alt="">
-                <img src="/Source/fa-brands_pied-piper-hat.svg" alt="">
-                <img src="/Source/fa-brands_stripe.svg" alt="">
-                <img src="/Source/fa-brands_aws.svg" alt="">
-                <img src="/Source/fa-brands_reddit-alien.svg" alt="">
+                <img src="Source/fa-brands_hooli.svg" alt="">
+                <img src="Source/fa-brands_lyft.svg" alt="">
+                <img src="Source/fa-brands_pied-piper-hat.svg" alt="">
+                <img src="Source/fa-brands_stripe.svg" alt="">
+                <img src="Source/fa-brands_aws.svg" alt="">
+                <img src="Source/fa-brands_reddit-alien.svg" alt="">
             </div>
             <div class="client-form">
                 <h3>Subscribe For Latest<br> Newsletter</h3>
@@ -181,7 +181,7 @@
             </div>
             <div class="contact-cards">
                 <div class="contact-item">
-                    <img src="/Source/cont1.svg" alt="">
+                    <img src="Source/cont1.svg" alt="">
                     <div class="contact-mail">
                         <h6>georgia.young@example.com</h6>
                         <h6>georgia.young@ple.com</h6>
@@ -190,7 +190,7 @@
                     <a href="#" class="contact-btn">Submit Request</a>
                 </div>
                 <div class="contact-item-center">
-                    <img src="/Source/cont2.svg" alt="">
+                    <img src="Source/cont2.svg" alt="">
                     <div class="contact-mail">
                         <h6>georgia.young@example.com</h6>
                         <h6>georgia.young@ple.com</h6>
@@ -199,7 +199,7 @@
                     <a href="#" class="contact-btn">Submit Request</a>
                 </div>
                 <div class="contact-item">
-                    <img src="/Source/cont3.svg" alt="">
+                    <img src="Source/cont3.svg" alt="">
                     <div class="contact-mail">
                         <h6>georgia.young@example.com</h6>
                         <h6>georgia.young@ple.com</h6>
@@ -263,15 +263,15 @@
                 <div class="info-address">
                    <h5>Get In Touch</h5>
                    <div class="address-item">
-                        <img src="/Source/add1.svg" alt="">
+                        <img src="Source/add1.svg" alt="">
                         <h6>(480) 555-0103</h6>
                    </div> 
                    <div class="address-item">
-                        <img src="/Source/add2.svg" alt="">
+                        <img src="Source/add2.svg" alt="">
                         <h6>4517 Washington Ave.</h6>
                    </div> 
                    <div class="address-item">
-                        <img src="/Source/add3.svg" alt="">
+                        <img src="Source/add3.svg" alt="">
                         <h6>debra.holt@example.com</h6>
                    </div> 
                 </div>
@@ -281,10 +281,10 @@
             <div class="footer-copyright">
                 <h6>Made With Love By Figmaland All Right Reserved </h6>
                 <nav class="footer-nav">
-                    <a href=""><img src="/Source/copy1.svg" alt=""></a>
-                    <a href=""><img src="/Source/copy2.svg" alt=""></a>
-                    <a href=""><img src="/Source/copy3.svg" alt=""></a>
-                    <a href=""><img src="/Source/copy4.svg" alt=""></a>
+                    <a href=""><img src="Source/copy1.svg" alt=""></a>
+                    <a href=""><img src="Source/copy2.svg" alt=""></a>
+                    <a href=""><img src="Source/copy3.svg" alt=""></a>
+                    <a href=""><img src="Source/copy4.svg" alt=""></a>
                 </nav>
             </div>
         </div>
